- File browser context menu gains many more KDE standard actions (KDE 4.3 and above, only)
- Auxiliary binaries rkward.bin and rkward.rbackend are no longer installed into /usr[/local]/bin/ on Unix
- Fixed: Object name completion would abort early in the script editor with KDE 4.4
- Support function argument hinting for R primitives
- Support package namespaces in object name completion and workspace browser
- Support S4 slots in object name completion and workspace browser		TODO: more testing
- More correct handling of quotes in object name completion
- Support plot history for ggplot2 plots
- Be less pro-active about fetching structure information on R objects in the workspace		TODO: verify that this fixes our issues with rXML
- Allow to browse arbitrarily deeply nested environments in the object browser

--- Version 0.5.5 - Mar-15-2011
- Fixed: Crash when several environments on the search path have the same name
- Re-organize the default toolbar actions of the main window
- Detached windows are now restored in detached state when restoring the workplace layout
- Workplace layout is now saved in a separate file, instead of in a hidden object inside the .RData file
- Added R functions rk.save.workplace() and rk.restore.workplace() to save / restore a set of document windows
- RKWard now tries to detect, when a workspace has been moved to a new directory, and adjust the paths restored script editor windows, accordingly
- Fixed: Potential crashes when changing length of a data.frame that is currently opened for editing from R code
- All pages in the package installation dialog now support sorting and keyboard search
- Fixed: Converting from factor to string in the data editor set values to numeric, internally
- Allow entering factor labels instead of only numbers, when editing factors in the data editor
- Display logical values as "TRUE" and "FALSE" in data editor, and accept "T"/"TRUE"/"F"/"FALSE" in addition to "0"/"1" while editing