@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="rkward_main" version="550">
+<kpartgui name="rkward_main" version="560">
 <MenuBar>
 	<!-- The Main Window ui.rc is the only one, where merging happens, reliably. That is, why we need to define
 	     a lot of merge points, here, which can then be used be mdi windows and their children.
@@ -51,10 +51,10 @@
 		<Action name="view_menu_dummy"/>
 	</Menu>
 	<Menu name="run"><text>&amp;Run</text>
-		<Action name="run_menu_dummy"/>
 		<DefineGroup name="prerun_actions_merge" append="prerun_actions_merge"/>
 		<DefineGroup name="run_actions_merge" append="run_actions_merge"/>
 		<DefineGroup name="postrun_actions_merge" append="postrun_actions_merge"/>
+		<Action name="cancel_all_commands"/>
 	</Menu>
 	
 	<Merge name="rkwardcomponents" />
