@@ -1,2 +1,2 @@
 /* Version number of package */
-#define VERSION "0.5.5.z+0.5.6+test1"
+#define VERSION "0.5.5.z+0.5.6+test2"
